--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "pinia": "^2.0.11",
+    "@quasar/cli": "^1.3.2",
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "quasar": "^2.6.0",
+    "pinia": "^2.0.11",
+    "quasar": "^2.6.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "vue-tsc": "^0.29.8",
