--- a/package.json
+++ b/package.json
@@ -15,22 +15,29 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
+    "fastify": "^3.29.0",
+    "fastify-swagger": "^5.2.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.5",
+    "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
-    "vue-tsc": "^0.29.8",
+    "@quasar/app-webpack": "^3.0.0",
+    "@types/crypto-js": "^4.1.1",
+    "@types/node": "^12.20.21",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^8.5.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "fastify-tsconfig": "^1.0.1",
     "prettier": "^2.5.1",
-    "@types/node": "^12.20.21",
-    "@quasar/app-webpack": "^3.0.0"
+    "vue-tsc": "^0.29.8"
   },
   "browserslist": [
     "last 10 Chrome versions",
