--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Brian Mitchell <dr.brian.mitchell@gmail.com>",
   "private": true,
   "scripts": {
+    "start-docker": "yarn serve",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0"
